# distributed-knn

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  benchmark_v2.sh  euclideanDistance.m  file-cleaner.py  knn.py
.github/workflows/: ci.yml
app/: main.cpp
benchmark/: benchmark.sh  nodes_visits.m  nodes_visits.xlsx  seq_times.m  speedup.m  test.m  v1.xlsx  v1_versus_v2.m  v2.xlsx  workspace.mat
dataset/: data.csv  data3.csv
dataset/corel_image_features/: CorelFeatures.data.html  CorelFeatures.html
dataset/random/: data2.csv
include/: demo.cpp  distributed.hpp  distributedVPT.hpp  example.h  exampleConfig.h.in  knn.h  knn.hpp  node.hpp  reader.hpp  utils.hpp  vpt.hpp  vpt_v2.hpp  vpt_v3.hpp  vptree.hpp
src/: example.cpp  knn.h  main.cpp
tests/: CMakeLists.txt  knn.cpp
